@@ -46,6 +46,9 @@ Release 2.3.0 - UNRELEASED
     HADOOP-9889. Refresh the Krb5 configuration when creating a new kdc in
     Hadoop-MiniKDC (Wei Yan via Sandy Ryza)
 
+    HADOOP-9915.  o.a.h.fs.Stat support on Mac OS X  (Binglin Chang via Colin
+    Patrick McCabe)
+
   OPTIMIZATIONS
 
     HADOOP-9748. Reduce blocking on UGI.ensureInitialized (daryn)
